@@ -15,63 +15,25 @@ tasks.withType<BootJar> {
     }
 }
 
-
 tasks.withType<JavaCompile> {
-//    options.compilerArgs = listOf("-Xlint:unchecked", "-verbose", "-XprintRounds", "-Xmaxerrs", "100000", "-Akey=name")
-//    options.compilerArgs =
-//        listOf(
-////            "-Djps.track.ap.dependencies=false",
-//            "--add-exports",
-//            "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-//            "--add-exports",
-//            "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-//            "--add-exports",
-//            "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-//            "--add-exports",
-//            "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-//            "--add-exports",
-//            "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
-//        )
+
 }
 
-//dependencyManagement {
-//    imports {
-//        mavenBom("com.alibaba.cloud:spring-cloud-alibaba-dependencies:${property("springCloudAlibabaVersion")}")
-//    }
-//}
+
 
 
 dependencies {
-    testImplementation("com.github.jsonzou:jmockdata:4.1.2")
+
     implementation(project(":wlxx-services:wlxx-system:wlxx-system-client"))
     implementation(project(":wlxx-framework:wlxx-common"))
     implementation(project(":wlxx-framework:wlxx-web"))
-    testCompileOnly("org.projectlombok:lombok")
-    testAnnotationProcessor("org.projectlombok:lombok")
-//    implementation("com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config")
-//    implementation("com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery")
-    implementation("com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery:${property("springCloudAlibabaVersion")}")
-//    {
-//        exclude("org.springframework.cloud", "spring-cloud-starter-netflix-ribbon")
-//        isTransitive = false
-//    }
-//    implementation("com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config:2022.0.0.0")
-    implementation("org.springframework.cloud:spring-cloud-starter")
-    implementation("org.springframework.cloud:spring-cloud-starter-loadbalancer")
-    implementation("org.springframework.cloud:spring-cloud-starter-bootstrap")
-    implementation("org.springframework.boot:spring-boot-starter-aop")
-    developmentOnly("org.springframework.boot:spring-boot-devtools")
+    testImplementation(project(":wlxx-framework:wlxx-test"))
 
-    implementation("io.jsonwebtoken:jjwt-api:${property("jwtWebTokenVersion")}")
-    implementation("io.jsonwebtoken:jjwt-impl:${property("jwtWebTokenVersion")}")
-    implementation("io.jsonwebtoken:jjwt-jackson:${property("jwtWebTokenVersion")}")
 
-//    implementation("org.springframework.boot:spring-boot-starter-websocket")
+    implementation("org.springframework.boot:spring-boot-starter-websocket")
 
     implementation("cn.zhxu:bean-searcher-boot-starter:4.1.2")
 
-    // https://mvnrepository.com/artifact/com.alibaba/easyexcel
-    implementation("com.alibaba:easyexcel:3.3.2")
 
     // pinyin 三选一
     implementation("com.github.promeg:tinypinyin:2.0.3")
@@ -82,4 +44,8 @@ dependencies {
 
 tasks.withType<BootBuildImage> {
 
+}
+
+tasks.withType<Test> {
+    enabled = true
 }
